[package]
name = "medoxido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.11"
tower-http = { version = "0.4.0", features = ["trace"] }
# Serde
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
# Axum
axum = { version = "0.6.18", features = ["tower-log", "http2"] }
surrealdb = { version = "1.0.0-beta.9" }
# sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.0.0", features = ["derive", "env"] }
# State of the art password hashing.
argon2 = "0.5.0"
# Utilities
anyhow = "1.0.44"
thiserror = "1.0.30"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
time = { version = "0.3.0", features = ["formatting"] }
uuid = { version = "1.3.3", features = ["serde", "fast-rng"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.14"

[dev-dependencies]
httpc-test = "0.1.1"
async-trait = "0.1.51"
itertools = "0.10.1"
rand = "0.8.4"
